--- a/Models/Speech_LLM/2023.10.07_LauraGPT.md
+++ b/Models/Speech_LLM/2023.10.07_LauraGPT.md
@@ -179,6 +179,37 @@ $$
 
 ## 4.Experiments: 实验
 
+### Model Architecture
+
+> The Conformer-based audio encoder consists of 32 conformer blocks.
+> Each block consists of a feed-forward module with 1536 units, an attention module with 16 heads and a dimension of 512, a convolutional module including the pointwise and depthwise convolution layers, and a second feed-forward module with 1536 units. 
+> Sinusoidal positional encoding is applied on the audio inputs. 
+> For a trade-off between performance and training efficiency, we use Qwen-1.8B\footnote{\url{https://github.com/QwenLM/Qwen}} as the backbone and LauraGPT has 2B parameters.
+> Qwen-1.8B comprises 24 transformer layers with a hidden size 2048 and 16 attention heads. 
+> \textbf{Although Conformer and Qwen-1.8B are selected as the audio encoder and GPT backbone, they can be replaced by other encoders and GPT models}.
+
+### Training Setup
+
+> In all experiments, we initialize the Qwen backbone and audio encoder with the pre-trained checkpoints. We then optimize the model parameters through multi-task fine-tuning. The training\&test datasets and evaluation metrics are presented in Appendix~\ref{sec:training-datasets} and ~\ref{sec:evaldata-metrics}. Appendix~\ref{sec:detail_training_setup} describes the three-stage training process to address the significant variation in data volume across different tasks, and details the inference process. 
+
 ## 5.Results: 结果
 
 ## 6.Conclusions: 结论
+
+> We propose LauraGPT that can handle both audio and text inputs and outputs and perform audio recognition, understanding, and generation. We propose combining continuous and discrete features for audio and a one-step codec vocoder, and employ multi-task learning. Experiments demonstrate that LauraGPT achieves comparable to superior performance compared to strong baselines on a wide range of speech tasks on content, semantics, paralinguistics, and audio-signal analysis. 
+
+## 7.Limitations: 局限性
+
+> In this work, in order to support a wide range of audio recognition, understanding, and generation tasks, we choose to train all parameters in LauraGPT during supervised multi-task finetuning, including the Qwen backbone, except for the codec vocoder. This strategy results in substantial computations for training. In future work, we plan to investigate parameter-efficient fine-tuning to reduce computation demands. Also, due to the limited computation resources, our comparisons between the multi-task trained LauraGPT and single-task models are focused on the low-resource tasks, that is, AAC, SLU, and SER tasks. We find that multi-task learning for LauraGPT consistently achieves better performance than single-task training for tasks with limited training data. Next, we plan to complete comparisons of LauraGPT and single-task models on all tasks, including relatively rich-resource tasks such as ASR. These studies will promote understandings on where tasks could benefit from each other, including tasks with even conflicting objectives. We also plan to conduct deeper analysis on the potential risk of catastrophic forgetting of the original text capabilities of the pre-trained text LLM, due to multi-task learning of speech tasks. Note that exploration of parameter-efficient fine-tuning may also help preserve the original text capabilities of the pre-trained text LLMs.
+>
+> LauraGPT relies on discrete audio tokens for speech generative tasks. Our research shows that the performance of this paradigm strongly depends on the quality of the audio tokenizer. We plan to systematically analyze the impact of various audio tokenizers on diverse audio generative tasks. We plan to develop new audio tokenizers that are more suitable for unified Auio-and-Text LLMs and provide desirable representations for generative tasks.
+>
+> There are great emerging interests in fundamental speech models that are similar to those in the field of NLP. This is a tremendously valuable research direction. Our work achieves  important milestone for this research question, as we explore and provide promising answers to the following question: \textit{How to design more efficient and scalable unified GPT-style Audio-and-Text LLMs than existing approaches that can leverage large-scale labeled data and achieve highly competitive performance on a diverse set of speech tasks, including speech recognition, understanding and generation, using a single model?} Note that previous general speech models either focus solely on speech recognition and understanding tasks but neglect speech generative tasks, or support speech generation but suffer from severe performance degradation on speech recognition and understanding tasks.
+>
+> Inspired by the recent advances of LLMs in NLP, we envision that the fundamental speech models should have the following capabilities:
+> - In-context learning ability like GPT-3, which can learn from few-shot examples and adapt to new tasks, such as predicting the age of the speaker from a speech sample.
+> - Instruction-following ability like InstructGPT and ChatGPT, which can perform the appropriate speech-related task given a natural language instruction, such as synthesizing a speech with a specific emotion or style.
+> - General audio modeling abilities, i.e., speech, non-speech audio, and music, such as music generation.
+>
+> Our work demonstrates that the current LauraGPT has made solid progress and reached one important milestone toward a speech foundation model. 
+> From LauraGPT to the next-generation speech foundation model we envision, most remaining efforts are in more task data collection and more self-supervised and/or supervised pre-training and supervised fine-tuning. There is no need to modify the model architecture.
