--- a/Models/Speech_LLM/2023.10.07_LauraGPT.md
+++ b/Models/Speech_LLM/2023.10.07_LauraGPT.md
@@ -74,27 +74,27 @@
 > Audio-to-text and text-to-audio LLMs can be considered as subsets of audio-and-text LLMs. 
 >
 > Audio-and-Text LLMs can be categorized into two directions.
-> One direction builds **a collaborative AI system** using LLMs as controllers to interface specialized audio models, such as ASR and TTS models, to support various audio-and-text tasks~\citep{DBLP:journals/corr/abs-2303-17580,DBLP:journals/corr/abs-2304-12995}.  These methods have serious drawbacks, including high complexity, significant resource consumption, and unavoidable error accumulation problems.
-> The other direction develops a **unified Audio-and-Text LLM** leveraging LLMs as the backbone to support audio-and-text tasks~\citep{DBLP:conf/acl/AoWZ0RW0KLZWQ0W22,DBLP:journals/corr/abs-2105-03070,DBLP:journals/corr/abs-2305-16107,DBLP:journals/corr/abs-2306-12925}.
+> One direction builds a collaborative AI system using LLMs as controllers to interface specialized audio models, such as ASR and TTS models, to support various audio-and-text tasks~\citep{DBLP:journals/corr/abs-2303-17580,DBLP:journals/corr/abs-2304-12995}.  These methods have serious drawbacks, including high complexity, significant resource consumption, and unavoidable error accumulation problems.
+> The other direction develops a unified Audio-and-Text LLM leveraging LLMs as the backbone to support audio-and-text tasks~\citep{DBLP:conf/acl/AoWZ0RW0KLZWQ0W22,DBLP:journals/corr/abs-2105-03070,DBLP:journals/corr/abs-2305-16107,DBLP:journals/corr/abs-2306-12925}.
 > Decoder-only audio-and-text LLMs~\citep{DBLP:journals/corr/abs-2305-11000,DBLP:journals/corr/abs-2305-16107,DBLP:journals/corr/abs-2306-12925} are the dominant technique under this category.
 > These models convert continuous audio into discrete tokens and integrate text and audio tokens into unified vocabulary.
 > These models suffer from information loss from quantization of speech signals into discrete tokens, which leads to notable performance degradation on ASR compared to models using continuous speech features~\citep{DBLP:journals/corr/abs-2311-04534,DBLP:journals/corr/abs-2305-18108,DBLP:journals/corr/abs-2309-07377,DBLP:journals/corr/abs-2309-10922}.
 > In this paper, we focus on improving the second category of unified Audio-and-Text LLMs.
 > Moreover, recent advances in audio generation from unified audio-and-text LLMs~\citep{DBLP:journals/corr/abs-2301-02111,DBLP:journals/corr/abs-2305-16107} discretize speech into codec codes, then use an autoregressive language model (LM) to predict output tokens from the first quantizer and use a non-autoregressive model to predict tokens from the other quantizers individually.
-> One limitation of this mechanism is that it needs many prediction steps (hence called **multi-step audio synthesis scheme**) to generate good quality speech.
+> One limitation of this mechanism is that it needs many prediction steps (hence called multi-step audio synthesis scheme) to generate good quality speech.
 > Another limitation is that predicting the indices of the other codec groups is challenging due to the multi-modal distribution nature of codec tokens~\citep{DBLP:journals/icassp/lmcodec}.
 >
-> To overcome the drawbacks of existing \textit{unified audio-and-text LLMs}, we propose ***LauraGPT***, a novel **unified Audio-and-Text LLM** based on the GPT framework for audio recognition, understanding, and generation.
+> To overcome the drawbacks of existing unified audio-and-text LLMs, we propose ***LauraGPT***, a novel **unified Audio-and-Text LLM** based on the GPT framework for audio recognition, understanding, and generation.
 > ***LauraGPT*** is a versatile LLM that can process both audio and text inputs and generate outputs in either modalities, with a single model.
-> We propose **a novel data representation that combines continuous and discrete features for audio**: ***LauraGPT*** encodes input audio into continuous representations using an audio encoder and generates output audio from discrete codec codes.
+> We propose a novel data representation that combines continuous and discrete features for audio: ***LauraGPT*** encodes input audio into continuous representations using an audio encoder and generates output audio from discrete codec codes.
 > This data representation improves the performance of audio-input tasks and also facilitates joint autoregressive modeling of audio and text features for audio generation tasks. 
 >
-> We also propose **a one-step codec vocoder in ***LauraGPT*** to address the two limitations of the popular multi-step audio synthesis scheme**.
+> We also propose a one-step codec vocoder in ***LauraGPT*** to address the two limitations of the popular multi-step audio synthesis scheme.
 > Our one-step codec vocoder uses a transformer-based predictor to estimate the sum of all codec token groups instead of the individual indices, by minimizing the reconstruction losses.
-> Our approach simplifies the audio generation process to a \textit{single} feed-forward calculation and also overcomes the prediction challenge caused by the multi-modal distribution of codec tokens.
+> Our approach simplifies the audio generation process to a single feed-forward calculation and also overcomes the prediction challenge caused by the multi-modal distribution of codec tokens.
 >
-> We fine-tune ***LauraGPT*** using **supervised multi-task learning on diverse audio tasks**, including tasks focusing on content, semantics, paralinguistics, and audio-signal analysis, such as ASR, speech-to-text translation (S2TT), TTS, SE, automated audio captioning (AAC), speech emotion recognition (SER), and SLU. 
-> **Comprehensive experiments show that, to the best of our knowledge, ***LauraGPT*** consistently achieves comparable to superior performance compared to strong baselines on the largest and the most diverse set of audio recognition, understanding, and generation tasks among existing decoder-only unified audio-and-text LLMs focusing on these tasks**~\citep{DBLP:journals/corr/abs-2305-11000,DBLP:journals/corr/abs-2305-16107,DBLP:journals/corr/abs-2306-12925}.
+> We fine-tune ***LauraGPT*** using supervised multi-task learning on diverse audio tasks, including tasks focusing on content, semantics, paralinguistics, and audio-signal analysis, such as ASR, speech-to-text translation (S2TT), TTS, SE, automated audio captioning (AAC), speech emotion recognition (SER), and SLU. 
+> Comprehensive experiments show that, to the best of our knowledge, ***LauraGPT*** consistently achieves comparable to superior performance compared to strong baselines on the largest and the most diverse set of audio recognition, understanding, and generation tasks among existing decoder-only unified audio-and-text LLMs focusing on these tasks~\citep{DBLP:journals/corr/abs-2305-11000,DBLP:journals/corr/abs-2305-16107,DBLP:journals/corr/abs-2306-12925}.
 > Demos  are available at https://lauragpt.github.io.
 > The results are remarkable since existing general speech models either focus solely on speech recognition and understanding tasks but neglect speech generative tasks, or support speech generation but suffer from severe performance degradation on speech recognition and understanding tasks.
 
@@ -140,14 +140,14 @@
 
 ### 3.1.Modified Language Model for Unifying Audio-and-Text Modeling
 
-> For audio inputs, different from other audio-and-text LLMs using discrete tokens to represent audio inputs, we extract the log-compressed Mel spectrogram features and convert them into  \textit{continuous representations} using a Conformer-based audio encoder.
+> For audio inputs, different from other audio-and-text LLMs using discrete tokens to represent audio inputs, we extract the log-compressed Mel spectrogram features and convert them into continuous representations using a Conformer-based audio encoder.
 > Text inputs and outputs are tokenized using the Qwen tokenizer \cite{qwen}, which inherits the tiktoken tokenizer~\citep{tiktoken} and incorporates additional augmentations for commonly used characters and words in different languages.
 > The tokenized input text undergoes embedding matrix transformation to generate dense vectors.
 > The audio representations and text embeddings have the same dimension $D$.
 > The Conformer-based encoder is initialized with weights from a pre-trained ASR model~\citep{gao2023funasr}. 
 > Since batch normalization can lead to endless loop decoding, we replace it with layer normalization in the Conformer-based encoder (details are in Appendix~\ref{sec:normlization}).
 >
-> To achieve audio generation capabilities, the audio outputs are discretized into tokens using an audio tokenizer (Section~\ref{sec:audio-tokenizer}) to obtain \textit{discrete representations} and the softmax output layer is augmented with the audio tokens. 
+> To achieve audio generation capabilities, the audio outputs are discretized into tokens using an audio tokenizer (Section~\ref{sec:audio-tokenizer}) to obtain discrete representations and the softmax output layer is augmented with the audio tokens. 
 > As a result, the weight matrix $\mathbf{W}$ in the output layer is of size $(N+M+L) \times D$ and is utilized to calculate the logits for audio and text tokens at each position, where $N$, $M$, and $L$ denote the vocabulary sizes of text, audio, and task tokens, respectively.
 > Task tokens are used to inform the model which task should be performed.
 > Note that in order to control the sequence length, we perform the low frame rate~(LFR) method~\citep{gao2020san-m} to downsample audio inputs to 60ms and only select the first codec group of the audio outputs.
@@ -173,21 +173,21 @@ $$
 
 ### 3.2.Audio tokenizer
 
-> For audio generation, we utilize a codec model as the audio tokenizer to extract \textit{discrete} representations.
+> For audio generation, we utilize a codec model as the audio tokenizer to extract discrete representations.
 > Our codec model shares a similar architecture as EnCodec~\citep{defossez2022highfi}, which comprises convolutional recurrent encoder and decoder~\citep{DBLP:conf/interspeech/TagliasacchiLMR20} and a residual vector quantizer (RVQ)~\citep{vasuki2006review}.
 > We enhance the original EnCodec model with the following modifications:
 > 1) Add reconstruction losses in the magnitude spectrum domain to improve the quality of middle- and high-frequency signals.
 > 2) Stack five strided convolution blocks with strides of $[8, 5, 4, 2, 2]$ to address the challenge of long sequence lengths, resulting in a token rate of 25Hz for each token group. 
 > 3) Use 32 quantizers with structured dropout in the RVQ module, each with vocabulary size 1024.
 > This revision improves speech quality with more quantizers while preserving most information in the shallow quantizers.
-> The encoder and the \textit{first RVQ quantizer} are used as the audio tokenizer, and **the outputs of the first quantizer are used as the audio tokens**.
+> The encoder and the first RVQ quantizer are used as the audio tokenizer, and the outputs of the first quantizer are used as the audio tokens.
 > The choice of the first $N$ RVQ quantizers to use is a tradeoff between performance and sequence length (hence efficiency).
 > The remaining quantizers and the decoder are only used when training the codec model.
 > Details of training and the pre-trained codec model are in ~\cite{du2023funcodec}. 
 
 ### 3.3.One-step Codec Vocoder for Audio Generation
 
-> We propose a one-step codec vocoder in ***LauraGPT*** to generate waveforms from the audio tokens, which are extracted from the \textit{first} quantizer as described in Section~\ref{sec:audio-tokenizer}.
+> We propose a one-step codec vocoder in ***LauraGPT*** to generate waveforms from the audio tokens, which are extracted from the first quantizer as described in Section~\ref{sec:audio-tokenizer}.
 > Our vocoder comprises two components: a transformer-based predictor and a codec decoder.
 > The predictor is trained to estimate the summation of codec embeddings from the 32 RVQ quantizers by minimizing the L1 and L2 distances between the predicted embeddings $\hat{\mathbf{E}}$ and their corresponding ground truth $\mathbf{E}$:
 
@@ -208,13 +208,13 @@ $$
 
 #### Basic Tasks
 
-> We unify modeling of the following \textit{basic tasks} in the single ***LauraGPT*** model and use these tasks for multi-task fine-tuning:
+> We unify modeling of the following basic tasks in the single ***LauraGPT*** model and use these tasks for multi-task fine-tuning:
 > Automatic Speech Recognition (**ASR**), Spoken Language Understanding (**SLU**), Speech-to-Text Translation (**S2TT**), Speech Emotion Recognition (**SER**), Automated Audio Captioning (**AAC**), Speech Enhancement (**SE**), and Text-to-speech Synthesis (**TTS**).
 > Task definitions are in Appendix~\ref{sec:task-intro}.
 
 #### Unified Task Expression
 
-> ***LauraGPT*** operates based on a unified task expression: \texttt{[input embeddings, task ID, output tokens]}.
+> ***LauraGPT*** operates based on a unified task expression: `[input embeddings, task ID, output tokens]`.
 > With the same inputs, the desired outputs can differ across tasks.
 > For instance, ASR and S2TT tasks require different outputs even for the same audio input.
 > Task tokens are included in both input embedding and output weight matrices.
@@ -226,10 +226,10 @@ $$
 > With its modularized design, ***LauraGPT*** provides an extensible framework to support complex tasks.
 > By breaking a task into sub-tasks among the basic tasks and cascading the raw inputs and model outputs of sub-tasks, ***LauraGPT*** can perform more complex tasks.
 > For example, we demonstrate that ***LauraGPT*** is capable of performing the advanced speech-to-speech translation (S2ST) task by combining the S2TT and TTS tasks.
-> Initially, a sequence is constructed to translate the speech content into the target language text using the S2TT task token: \texttt{[audio encoding, <S2TT>]}. 
-> Subsequently, the translated text is combined with the TTS task token to synthesize speech: \texttt{[text embedding, <TTS>]}. 
-> If maintaining the speaker identity is desired, the original inputs and content can be incorporated to perform \textit{personalized TTS}.
-> This can be achieved with an input sequence as \texttt{[ASR recognized text embedding, S2TT translated text embedding, <TTS>, audio token of input speech]}, where \texttt{ASR recognized text embedding} is obtained using the ASR task: \texttt{[audio encoding, <ASR>]}.
+> Initially, a sequence is constructed to translate the speech content into the target language text using the S2TT task token: `[audio encoding, <S2TT>]`. 
+> Subsequently, the translated text is combined with the TTS task token to synthesize speech: `[text embedding, <TTS>]`. 
+> If maintaining the speaker identity is desired, the original inputs and content can be incorporated to perform personalized TTS.
+> This can be achieved with an input sequence as `[ASR recognized text embedding, S2TT translated text embedding, <TTS>, audio token of input speech]`, where `ASR recognized text embedding` is obtained using the ASR task: `[audio encoding, <ASR>]`.
 > This approach treats the bilingual text as the complete input and allows the model to generate an output sequence of codec tokens while maintaining the same speaker identity.
 > Audio samples of S2ST can be found on the demo site.
 > More examples of complex tasks are in Appendix~\ref{appendix:more-complex-tasks}.
@@ -241,9 +241,9 @@ $$
 > The Conformer-based audio encoder consists of 32 conformer blocks.
 > Each block consists of a feed-forward module with 1536 units, an attention module with 16 heads and a dimension of 512, a convolutional module including the pointwise and depthwise convolution layers, and a second feed-forward module with 1536 units. 
 > Sinusoidal positional encoding is applied on the audio inputs. 
-> For a trade-off between performance and training efficiency, we use Qwen-1.8B\footnote{\url{https://github.com/QwenLM/Qwen}} as the backbone and ***LauraGPT*** has 2B parameters.
+> For a trade-off between performance and training efficiency, we use [Qwen-1.8B](https://github.com/QwenLM/Qwen) as the backbone and ***LauraGPT*** has 2B parameters.
 > Qwen-1.8B comprises 24 transformer layers with a hidden size 2048 and 16 attention heads. 
-> **Although Conformer and Qwen-1.8B are selected as the audio encoder and GPT backbone, they can be replaced by other encoders and GPT models**.
+> Although Conformer and Qwen-1.8B are selected as the audio encoder and GPT backbone, they can be replaced by other encoders and GPT models.
 
 ### Training Setup
 
@@ -260,7 +260,8 @@ $$
 
 ### 5.1.Results on All Tasks
 
-> Table~\ref{tab:overall_res} shows the results from the SOTA model, a comparable baseline, and our ***LauraGPT***\footnote{Our results are from single runs due to the stability of the models and limited computational resources.}, in that order, on a variety of speech recognition, understanding, and generation benchmarks. 
+> Table~\ref{tab:overall_res} shows the results from the SOTA model, a comparable baseline, and our ***LauraGPT***, in that order, on a variety of speech recognition, understanding, and generation benchmarks.
+> Our results are from single runs due to the stability of the models and limited computational resources. 
 > The SOTA model yields the best results on each test set based on our literature review.
 > The baseline for each task is chosen to facilitate fair comparison with ***LauraGPT***: they are comparable to ***LauraGPT*** in model architecture or training data and are also common competitive baselines in the literature.
 > We cite the SOTA results to validate that ***LauraGPT*** consistently performs competitively on all the speech recognition, understanding, and generation tasks and the baselines are competitive.
@@ -270,11 +271,11 @@ $$
 > Moreover, QwenAudio does not support speech generative tasks hence cannot handle SE and TTS tasks.
 > Paraformer-large and UniverSLU achieve SOTA results on AISHELL-2 test-ios for Chinese ASR and on SLURP test for SLU; however, they only support single tasks and also train on more data than ***LauraGPT*** on the corresponding task. 
 > Appendix~\ref{appendix:comparison-other-text-audio-model} shows that ***LauraGPT*** greatly outperforms Whisper Large V2 on Chinese ASR test sets while the gap on English ASR test sets are primarily attributed to the much smaller English data used for training ***LauraGPT***.
-> For TTS, the SOTA VALL-E Phone outperforms baseline VALL-E Token\footnote{We re-implement two VALL-E models with 0.34B trainable parameters, both trained with the same data as ***LauraGPT***.
-> VALL-E Phone uses phonemes as the text input representation, while VALL-E Token uses WordPiece tokens from the text tokenizer.}, suggesting the importance of text representation for TTS.
+> For TTS, the SOTA VALL-E Phone outperforms baseline VALL-E Token, suggesting the importance of text representation for TTS.
+> (We re-implement two VALL-E models with 0.34B trainable parameters, both trained with the same data as ***LauraGPT***. VALL-E Phone uses phonemes as the text input representation, while VALL-E Token uses WordPiece tokens from the text tokenizer.)
 > Compared to both VALL-E models, ***LauraGPT*** achieves comparable speaker similarity (SECS) and speech quality (MOSNet).
 > The degradation in content consistency (WER) from ***LauraGPT*** results from the generalization issue, since the training data is too limited for ***LauraGPT*** with 2B parameters.
-> Overall, the results show that *****LauraGPT*** consistently achieves comparable to superior performance than strong baselines on diverse speech tasks, demonstrating the general effectiveness of ***LauraGPT*** on speech recognition, understanding, and generative tasks**.
+> Overall, the results show that ***LauraGPT*** consistently achieves comparable to superior performance than strong baselines on diverse speech tasks, demonstrating the general effectiveness of ***LauraGPT*** on speech recognition, understanding, and generative tasks**.
 
 ### 5.2.Analysis
 
@@ -282,8 +283,8 @@ $$
 > Continuous Representations for Audio Inputs
 
 > Existing unified Audio-and-Text LLMs use discrete tokens to represent audio inputs.
-> We analyze the efficacy of using continuous representations for audio inputs in ***LauraGPT*** by comparing to its counterpart **Discrete IO** on ASR, S2TT, and SE tasks, representing **audio-input recognition and understanding, and audio generation capacities**.
-> In Discrete IO, both audio inputs and outputs are represented by flattened codec tokens from \textit{the first four quantizers}\footnote{Using outputs of the first quantizer (as in ***LauraGPT***) for audio tokenizer renders very poor performance for audio-input tasks with the Discrete IO models.
+> We analyze the efficacy of using continuous representations for audio inputs in ***LauraGPT*** by comparing to its counterpart **Discrete IO** on ASR, S2TT, and SE tasks, representing audio-input recognition and understanding, and audio generation capacities.
+> In Discrete IO, both audio inputs and outputs are represented by flattened codec tokens from the first four quantizers \footnote{Using outputs of the first quantizer (as in ***LauraGPT***) for audio tokenizer renders very poor performance for audio-input tasks with the Discrete IO models.
 > Using more quantizers improves performance but reduces efficiency.}, resulting in a token rate of 100Hz.
 > In ***LauraGPT***, audio inputs are represented by continuous acoustic features, which are also fed into our one-step vocoder as a condition to achieve high-quality outputs.
 > Table~\ref{tab:diif_input_token} shows that *****LauraGPT*** consistently outperforms Discrete IO with remarkable gains on all tasks**. 
@@ -294,10 +295,10 @@ $$
 
 #### Comparison on Audio Synthesis Schemes
 
-> VALL-E~\citep{DBLP:journals/corr/abs-2301-02111} introduces a commonly used scheme formulating audio synthesis as a \textit{classification problem}: A neural network is shared to predict the codec tokens in the following group with the previous ones as inputs and synthesizing target audio requires multiple steps or iterations to achieve a reasonable speech quality.
-> In contrast, our one-step codec vocoder formulates audio synthesis as a \textit{regression problem}.
+> VALL-E~\citep{DBLP:journals/corr/abs-2301-02111} introduces a commonly used scheme formulating audio synthesis as a classification problem: A neural network is shared to predict the codec tokens in the following group with the previous ones as inputs and synthesizing target audio requires multiple steps or iterations to achieve a reasonable speech quality.
+> In contrast, our one-step codec vocoder formulates audio synthesis as a regression problem.
 > As described in Section~\ref{sec:codec_vocoder}, our one-step codec vocoder simplifies audio synthesis into a single feed-forward calculation and overcomes the prediction challenge caused by the multimodal distribution of codec tokens.
-> Table~\ref{tab:comp-audio-syn-se} shows that **our one-step codec vocoder greatly outperforms the multi-step scheme in terms of content consistency (CER, WER) and speech quality (PESQ), while obtaining the same intelligibility (STOI)**.
+> Table~\ref{tab:comp-audio-syn-se} shows that our one-step codec vocoder greatly outperforms the multi-step scheme in terms of content consistency (CER, WER) and speech quality (PESQ), while obtaining the same intelligibility (STOI).
 
 #### Effectiveness of Multi-task Finetuning
 
@@ -309,7 +310,7 @@ $$
 > The results are shown in Table~\ref{tab:single-multi-compare}.  
 >
 > **For the AAC task**, we find that the multi-task trained ***LauraGPT*** outperforms the single-task model on SPICE, CIDEr and SPIDEr on the Clotho evaluation set. 
-> **For the SLU task**, on the SLURP test set, ***LauraGPT*** greatly outperforms the single-task model on intent accuracy by **+2.9** absolute and on SLU-F1 by **+22.5** absolute.
+> **For the SLU task**, on the SLURP test set, ***LauraGPT*** greatly outperforms the single-task model on intent accuracy by +2.9 absolute and on SLU-F1 by +22.5 absolute.
 > **For the SER task**, on the MELD test set, ***LauraGPT*** substantially outperforms the single-task model in terms of UA and the primary WF1 metrics, while the WA result is slightly worse.
 > More analyses in Appendix~\ref{ser-impact-of-multi-task-finetuning} show that multi-task learning dramatically improves accuracies of the minority classes. **In summary, these results verify that multi-task learning for ***LauraGPT*** consistently achieves better performance than single-task training for tasks with limited training data.**
 
@@ -338,7 +339,9 @@ $$
 >
 > There are great emerging interests in fundamental speech models that are similar to those in the field of NLP.
 > This is a tremendously valuable research direction.
-> Our work achieves  important milestone for this research question, as we explore and provide promising answers to the following question: \textit{How to design more efficient and scalable unified GPT-style Audio-and-Text LLMs than existing approaches that can leverage large-scale labeled data and achieve highly competitive performance on a diverse set of speech tasks, including speech recognition, understanding and generation, using a single model?} Note that previous general speech models either focus solely on speech recognition and understanding tasks but neglect speech generative tasks, or support speech generation but suffer from severe performance degradation on speech recognition and understanding tasks.
+> Our work achieves  important milestone for this research question, as we explore and provide promising answers to the following question: 
+> How to design more efficient and scalable unified GPT-style Audio-and-Text LLMs than existing approaches that can leverage large-scale labeled data and achieve highly competitive performance on a diverse set of speech tasks, including speech recognition, understanding and generation, using a single model? 
+> Note that previous general speech models either focus solely on speech recognition and understanding tasks but neglect speech generative tasks, or support speech generation but suffer from severe performance degradation on speech recognition and understanding tasks.
 >
 > Inspired by the recent advances of LLMs in NLP, we envision that the fundamental speech models should have the following capabilities:
 > - In-context learning ability like GPT-3, which can learn from few-shot examples and adapt to new tasks, such as predicting the age of the speaker from a speech sample.
