--- a/Models/TTS3_Vocoder/2024.08.13_VNet.md
+++ b/Models/TTS3_Vocoder/2024.08.13_VNet.md
@@ -35,11 +35,17 @@
 
 ## Abstract: 摘要
 
-## 1.Introduction: 引言
-
 Since the introduction of Generative Adversarial Networks (GANs) in speech synthesis, remarkable achievements have been attained. In a thorough exploration of vocoders, it has been discovered that audio waveforms can be generated at speeds exceeding real-time while maintaining high fidelity, achieved through the utilization of GAN-based models. Typically, the inputs to the vocoder consist of band-limited spectral information, which inevitably sacrifices high-frequency details. To address this, we adopt the full-band Mel spectrogram information as input, aiming to provide the vocoder with the most comprehensive information possible.
 However, previous studies have revealed that the use of full-band spectral information as input can result in the issue of over-smoothing, compromising the naturalness of the synthesized speech. To tackle this challenge, we propose VNet, a GAN-based neural vocoder network that incorporates full-band spectral information and introduces a Multi-Tier Discriminator (MTD) comprising multiple sub-discriminators to generate high-resolution signals. Additionally, we introduce an asymptotically constrained method that modifies the adversarial loss of the generator and discriminator, enhancing the stability of the training process.
 Through rigorous experiments, we demonstrate that the VNet model is capable of generating high-fidelity speech and significantly improving the performance of the vocoder.
+
+## 1.Introduction: 引言
+
+Speech synthesis is crucial across various domains, including accessibility, education, entertainment, and customer service \cite{c1}. However, conventional systems often encounter challenges with timbre, speech rate variation, and vocal coherence \cite{c2,c3,c4}. Recent advancements in deep learning and neural network techniques have significantly improved the quality of speech synthesis \cite{c5,c6}. The neural network and deep learning-based speech synthesis now being introduced are broadly divided into two steps: 1) Acoustic modeling: taking characters (text) or phonemes as input and creating a model of the acoustic features. (The acoustic features used in most of the work are Mel Spectrograms); 2) Vocoder: a model that takes Mel Spectrograms (or similar spectrograms) as input and generates real audio \cite{c7}. As an important step in speech synthesis, the study of the vocoder has received extensive attention. This paper focuses on the vocoder part of the study. Vocoder models can be broadly categorized into autoregressive-based (e.g., WaveNet \cite{c8}, WaveRNN \cite{c9}), flow-based (e.g., WaveGlow \cite{c10}, Parallel WaveGAN \cite{c11}), GAN-based \cite{c12} (e.g., MelGAN \cite{c13}, HiFiGAN \cite{c14}, BigVGAN \cite{c15}) and diffusion model-based (e.g., WaveGrad \cite{c16}, Grad-tts \cite{c17}, FastDiff \cite{c18}, ProDiff \cite{c19}) approaches. These advancements promise more natural and coherent speech, enhancing user experience across various applications.
+
+GANs employ an adversarial training approach, where the generator and discriminator engage in a competitive process. This competition fosters improved generator performance and enhances the ability to generate features resembling real data, making GANs widely utilized in vocoder tasks. While the GAN-based generative model can synthesize high-fidelity audio waveforms faster than real-time, most vocoders operate on band-limited Mel spectrogram as input. For instance, HiFi-GAN utilizes band-limited Mel spectrograms as input. Other similar models include LVCNet \cite{c20}, StyleMelGAN \cite{c21} and WaveGlow \cite{c10}. However, speech signals generated with band-limited Mel spectrograms lack high-frequency information, leading to fidelity issues in the resulting waveforms. Thus, considering full-band Mel spectrogram information as vocoder input is crucial. Despite attempts by Parallel WaveGAN to use full-band Mel spectrograms, it faces challenges such as excessive smoothing, resulting in the generation of non-sharp spectrograms and unnatural speech output \cite{c11}.
+
+The loss function of a GAN typically encompasses both the generator and discriminator loss functions. However, various vocoder models employ distinct loss function designs and exhibit differences in the selection of similar loss terms, leading to training instability. For instance, Parallel WaveGAN incorporates cross-entropy loss into the generator loss to address instability issues, albeit without complete resolution \cite{c11}. MelGAN endeavors to enhance stability by replacing the cross-entropy loss with hinge loss and augmenting feature matching loss, yet gradient loss persists \cite{c13}. HiFiGAN introduces feature matching loss and Mel spectrogram loss to mitigate training instability \cite{c14}. Despite the inclusion of these additional loss functions, training may still encounter challenges such as gradient loss and pattern collapse, resulting in an unstable training process.
 
 ## 2.Related Works: 相关工作
 
